--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phone-cALCULATOR</title>
+    <title>Phone-Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="calculatorGrid">
         <div class="output">
-            <div class="previousOperand"></div>
-            <div class="currentOperand"></div>
+            <div class="previousOperand">hjhj</div>
+            <div class="currentOperand">ghjk;</div>
         </div>
         <button class="spanTwo">AC</button>
         <button>DEL</button>
@@ -30,7 +30,7 @@
         <button>-</button>
         <button>.</button>
         <button>0</button>
-        <button>=</button>
+        <button class="spanTwo ">=</button>
 
     </div>
 
